[package]
name = "dwldutil"
version = "2.0.2"
edition = "2024"
description = "A utility for parallel downloading"
authors = ["k3nder <k3nder@outlook.es>"]
license = "GPL-3.0-only"
repository = "https://github.com/k3nder/dwldutil"
rust-version = "1.85.0"
categories = ["command-line-utilities", "multimedia"]
keywords = ["download", "parallel", "utility"]

[dependencies]
env_logger = "0.11.7"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.11"
log = "0.4.26"
sha1 = "0.10.6"
sha2 = "0.10.8"
smol = "2.0.2"
surf = "2.3.2"

flate2 = { version = "1.0.29", optional = true }
zip = { version = "0.5.0", optional = true }
tar = { version = "0.4.44", optional = true }

symlink = { version = "0.1.0", optional = true }

[features]
default = ["cas"]
gzip = ["tar", "flate2", "decompress"]
normal_zip = ["zip", "decompress"]
decompress = []
cas = ["symlink"]
