[package]
name = "dwldutil"
version = "3.0.2"
edition = "2024"
description = "A utility for parallel downloading"
authors = ["k3nder <k3nder@outlook.es>"]
license = "GPL-3.0-only"
repository = "https://github.com/k3nder/dwldutil"
rust-version = "1.85.0"
categories = ["command-line-utilities", "multimedia"]
keywords = ["download", "parallel", "utility"]

[dependencies]
futures = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
tracing = "0.1.41"
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
smol = { version = "2.0.2", default-features = false }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"]}

indicatif = { version = "0.17.11", optional = true }

flate2 = { version = "1.0.29", optional = true }
zip = { version = "0.5.0", optional = true }
tar = { version = "0.4.44", optional = true }

symlink = { version = "0.1.0", optional = true }


[features]
default = ["cas"]
gzip = ["tar", "flate2", "decompress"]
normal_zip = ["zip", "decompress"]
decompress = []
cas = ["symlink"]
no_static_client = []
indicatif_indicator = ["indicatif"]
